Edited d and added the pdf

--- a/skydiving.tex
+++ b/skydiving.tex
@@ -98,5 +98,6 @@ $v(t)= \sin(\alpha t)$ and we now have to fit $F_s$ to this solution
 F_s^{n+\frac{1}{2}} &= \frac{\cos(\alpha n \Delta t) + a |\sin(\alpha n \Delta
         t)| \sin (\alpha (n+1) \Delta t) - b}{c}
 \end{align*}
-
+We see that the convergence test fails, but are as of yet still unsure where
+ in the code the bug is located.
 \end{document}
