--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Simen Tennøe & Ingrid Elgsaas-Vada
+# Mandatory exercises for [INF5620 - Numerical methods for partial differential equations](http://www.uio.no/studier/emner/matnat/ifi/INF5620/index-eng.html)
+
+By: Simen Tennøe & Ingrid Elgsaas-Vada
